--- a/visual_variable_selection.qmd
+++ b/visual_variable_selection.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Visual selection of variables vs. Lasso model"
-format: html
 toc: true
+format: html
 ---
 
 When working data for a prediction model we can chose one of two paths, reducing the number of variables for the most important to simplify and better explain the model, or work with all variables in order to take the advantage of all the data.
@@ -53,11 +53,11 @@ panel.hist <- function(x, ...) {
 ```{r Visualize mtcars correlation, distribution and trends}
 #| echo: false
 #| warning: false
-#| include: false
 pairs(mtcars,
       upper.panel = panel.cor,
       diag.panel = panel.hist,
       lower.panel = panel.smooth)
+
 ```
 
 Visually it seems that gear (number of forward gears), qsec (1/4 mile time) and carbs (number of carburetors) can be discarded of the final model as the correlation to mpg is similar or lower than average.
@@ -124,13 +124,13 @@ So we could work a model with a decent accuracy using six variables instead of 9
 Hitters data-set can be found in the ISLR2 library, 'Major League Baseball Data from the 1986 and 1987 seasons.' It has 20 variables as AtBat, Hits, Runs, Walks and more, the exercise is to predict the Salary of a player given this and other parameters of its carer.
 
 ```{r Load dataset}
+#| echo: false
 Hitters <- na.omit(ISLR2::Hitters)
 ```
 
 ```{r Visualize Hitters correlation, distribution and trends}
 #| echo: false
 #| warning: false
-#| include: false
 pairs(Hitters,
       upper.panel = panel.cor,
       diag.panel = panel.hist,
